--- a/README.adoc
+++ b/README.adoc
@@ -294,13 +294,8 @@ endif::[]
 
 // Cloud hosted guide version
 ifdef::cloud-hosted[]
-You can test this service manually by starting a server and running the following `curl` command:
-
-```
-curl http://localhost:9080/system/properties-new
-```
-{: codeblock}
-
+You can test this service manually by starting a server and going to the 
+**http://localhost:9080/system/properties-new** URL.
 However, automated tests are a much better approach because they trigger a failure if a change introduces a bug.
 JUnit and the JAX-RS Client API provide a simple environment to test the application. 
 You can write tests for the individual units of code outside of a running application server,
