--- a/README.adoc
+++ b/README.adoc
@@ -216,7 +216,7 @@ endif::[]
 
 // Cloud hosted guide instruction
 ifdef::cloud-hosted[]
-If your container runs without problems, run the following *curl* command to get a JSON response
+If your container runs without problems, run the following **curl** command to get a JSON response
 that contains the system properties of the JVM in your container.
 
 ```
@@ -370,9 +370,8 @@ mvn liberty:devc \
 -Ddockerfile="./path/to/file"
 ----
 
-To learn more about dev mode with a container and its different
-features, check out the  
-https://github.com/OpenLiberty/ci.maven/blob/main/docs/dev.md#devc-container-mode[Documentation].
+To learn more about dev mode with a container and its different features, 
+check out the http://github.com/OpenLiberty/ci.maven/blob/main/docs/dev.md#devc-container-mode[Documentation^].
 
 == Great work! You're done!
 
